--- a/sass/modules/_controls.scss
+++ b/sass/modules/_controls.scss
@@ -1,6 +1,8 @@
 /* ----------------------------------------------------------------------------
   controls */
 
+$total-columns: 8;
+
 $control-icon: $medpx;
 $control-line: 1.5;
 
